--- a/style.css
+++ b/style.css
@@ -1,10 +1,22 @@
 body {
-    text-align: center;
+  text-align: center;
+  background: url(img/bg-quiz.jpg) no-repeat center center fixed;
+  background-size: cover;
 }
 
 button {
-    font-size: 18px;
-    padding: 15px;
-    margin: 10px;
-    background-color: #e7e7e7;
+  font-size: 18px;
+  padding: 15px;
+  margin: 10px;
+  background-color: #e7e7e7;
+  border-radius: 5px;
+}
+
+#correct {
+  font-weight: 800;
+}
+
+.startBtn,
+.resetBtn {
+  margin-top: 20px;
 }
